--- a/front-end.yml
+++ b/front-end.yml
@@ -46,55 +46,6 @@ spec:
           timeoutSeconds: 1
       nodeSelector:
         beta.kubernetes.io/os: linux
-
----
-apiVersion: extensions/v1beta1
-kind: Deployment
-metadata:
-  name: front-end-v2
-  namespace: production
-spec:
-  replicas: 1
-  template:
-    metadata:
-      labels:
-        app: front-end
-        version: v2
-    spec:
-      containers:
-      - name: front-end
-        image: to-be-replaced-by-jenkins
-        env: 
-        - name: DT_TAGS
-          value: "product=sockshop"
-        - name: DT_CUSTOM_PROP
-          value: "SERVICE_TYPE=FRONTEND"
-        resources:
-          limits:
-            cpu: 300m
-            memory: 1024Mi
-          requests:
-            cpu: 100m
-            memory: 320Mi
-        ports:
-        - containerPort: 8080
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 8080
-          initialDelaySeconds: 120
-          periodSeconds: 10
-          successThreshold: 1
-          timeoutSeconds: 1
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 8080
-          periodSeconds: 10
-          successThreshold: 1
-          timeoutSeconds: 1
-      nodeSelector:
-        beta.kubernetes.io/os: linux
 ---
 apiVersion: v1
 kind: Service
@@ -110,3 +61,19 @@ spec:
     targetPort: 8080
   selector:
     app: front-end
+---
+apiVersion: v2
+kind: Service
+metadata:
+  name: front-end
+  labels:
+    app: front-end
+  namespace: production
+spec:
+  ports:
+  - name: http
+    port: 8080
+    targetPort: 8080
+  selector:
+    app: front-end
+
